--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -2751,7 +2751,7 @@ margin-bottom: 0px;
 
 /******** product-search-inner *********/
 .product-search-inner {
-  padding: 20px 40px;
+  padding: 0px 40px;
   border-radius: 6px;
   margin-bottom: 35px;
 }
